ENV File Config
App File Error Solved

Env Variable Bug Solved

Env file config

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
     Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
 }
+.mode-name {
+  text-align: center;
+}
 .table-card-container {
   background-color: white;
   margin: 3rem;
